--- a/index.html
+++ b/index.html
@@ -68,16 +68,7 @@
 
     <div class="container">
         <h1>Specialised in Bicycles</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet corporis quas nulla hic delectus cupiditate odio accusantium fugit explicabo. Tempora eius mollitia quasi quisquam incidunt, itaque dolore corporis perferendis fuga.
-        Quod excepturi doloremque ipsam quo adipisci necessitatibus soluta repellendus odit fugiat alias tenetur voluptate recusandae atque laudantium sint, eius minus unde veniam velit accusantium saepe qui, non quam quisquam! Unde.
-        Accusantium quidem unde iste sit ea neque quas pariatur eum? Autem porro consequatur debitis saepe ipsam sequi odit reprehenderit nobis ducimus! Non rerum quas maxime minima officiis asperiores vero consectetur.
-        Aliquid non sit aperiam! Delectus pariatur ratione placeat quae rerum laboriosam, non ut nemo harum animi inventore aliquid, maxime eligendi, praesentium velit beatae necessitatibus nihil modi ad officia quo! Dolorum.
-        Ad iure minus assumenda, quasi corrupti reiciendis beatae excepturi, molestias commodi dolorum sint ea in. Dolor eveniet, ipsam illo, consectetur rem iure odit cum sint fugit autem eum ab odio.
-        Consectetur perferendis molestias, quae fuga nulla magnam a possimus nesciunt ex consequuntur delectus aliquam omnis quas autem saepe voluptatibus inventore! Placeat, impedit vero sapiente dignissimos maiores ex odit autem? Omnis!
-        Doloribus ut ex, asperiores veniam a possimus consequuntur odio commodi consequatur nam at illum quibusdam laudantium culpa quod error harum nisi, tempore reiciendis! Similique doloribus quos iusto nam eligendi facere!
-        Veniam aliquam numquam amet dolorum, dolorem omnis voluptatibus ipsam voluptatum exercitationem pariatur fuga dignissimos eveniet. Error eius debitis perspiciatis doloribus perferendis tempore illo, reprehenderit veritatis tenetur, earum corrupti libero quae.
-        A suscipit culpa officia illum hic, voluptate, exercitationem iusto repellat ipsam dignissimos, mollitia quas quidem quos rem natus architecto. Omnis quam odit ducimus inventore commodi reprehenderit ea atque, repudiandae rerum.
-        Quae asperiores ut voluptatem veritatis magni incidunt! Rem nemo eum maiores molestias, eaque delectus nihil nobis vitae recusandae natus eveniet assumenda commodi et in laudantium vel quo enim voluptate incidunt.
+        <p> Here, we are specialised and dedicated towards bikes. Bikes are our passion, and it can be yours too. Head down to our forum and talk with like-minded people, or check out our range of products and services. Bikes4u, Bikes For All1  
     </p>
     </div>
 
