--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="container">
         <h1>Specialised in Bicycles</h1>
-        <p> Here, we are specialised and dedicated towards bikes. Bikes are our passion, and it can be yours too. Head down to our forum and talk with like-minded people, or check out our range of products and services. Bikes4u, Bikes For All1  
+        <p> Here, we are specialised and dedicated towards bikes. Bikes are our passion, and it can be yours too. Head down to our forum and talk with like-minded people, or check out our range of products and services. Bikes4u, Bikes For All!  
     </p>
     </div>
 
