--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
                 <img src="images/img7.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Forum</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
                 <img src="images/img4.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Latest Bike Collection</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
                 <img src="images/img1.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Send us an email!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
         </div>
