--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
             <div class="card col" style="width: 18rem;">
                 <img src="images/img7.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Forum</p>
+                  <h5 class="card-title">Forum</h5>
+                  <p class="card-text">Talk with like-minded bike enthusiasts!</p>
                   <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
                 <img src="images/img4.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Check out our latest bike collection!</h5>
                   <p class="card-text">Latest Bike Collection</p>
                   <a href="#" class="btn btn-primary">Enter</a>
                 </div>
@@ -96,8 +96,8 @@
             <div class="card col" style="width: 18rem;">
                 <img src="images/img1.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Send us an email!</p>
+                  <h5 class="card-title">Send us an email!</h5>
+                  <p class="card-text">Want a quick chat? Send us an email!</p>
                   <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
