--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">New Bikes</a>
+                <a class="nav-link" href="newbikes.html">New Bikes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Repair Bikes</a>
