--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="newbikes.html">New Bikes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Repair Bikes</a>
+                <a class="nav-link" href="rent.html">Repair Bikes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Rent / Lease</a>
