--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link" href="newbikes.html">New Bikes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="rent.html">Repair Bikes</a>
+                <a class="nav-link" href="repair.html">Repair Bikes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Rent / Lease</a>
+                <a class="nav-link" href="rent.html">Rent / Lease</a>
               </li>
             </ul>
           </div>
