--- a/rent.html
+++ b/rent.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="images/images/Bikes All.png" alt="" height="242" width="263"></a>
+          <a class="navbar-brand" href="#"><img src="images/Bikes All.png" alt="" height="242" width="263"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem;">
-                <img src="images/images/img6.jpg" class="card-img-top" width="105%" height="359" alt="...">
+                <img src="images/img6.jpg" class="card-img-top" width="105%" height="359" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
+                <img src="images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
