--- a/repair.html
+++ b/repair.html
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem;">
-                <img src="images/images/img4.jpg" class="card-img-top" width="1420" height="509" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" width="1420" height="509" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
+                <img src="images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
