--- a/repair.html
+++ b/repair.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="images/images/Bikes All.png" alt="" height="242" width="263"></a>
+          <a class="navbar-brand" href="#"><img src="images/Bikes All.png" alt="" height="242" width="263"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
