--- a/newbikes.html
+++ b/newbikes.html
@@ -62,7 +62,7 @@
         <h1>&nbsp;</h1>
         <h1>&nbsp;</h1>
       <h1>New Bikes</h1>
-        <p>When you're determined to ride hard and the bike is still in excellent condition, a new bike will probably help you get faster. Thoughtfully consider your options before blowing the funds on a new bike because, realistically, it might only be a few months until you find yourself in the same situation you are now.While it's still in excellent condition and you're determined to ride it hard, a new bike will probably make you faster. However, in reality, it might only be a few months before you find yourself in the same situation you are in right now. As a result, you should consider hard before blowing your budget on a new bike. As long as it's in excellent condition and you're eager to ride hard, a new bike will probably help you get faster. Realistically though, you might only be in this situation for a few months, so don't feel compelled to squander all your money on a new bike right away. When you're determined to ride hard and the bike is still in excellent condition, a new bike will probably help you get faster. Thoughtfully consider your options before blowing the funds on a new bike because, realistically, it might only be a few months until you find yourself in the same situation you are now.</p>
+        <p>A new bike, is like a newborn. Taking care of it and looking after it. The first time you sit on the bike's padded seat, and you pedal away into a new dimension, that is the feeling of bliss. We can help you in gaining that newborn. Look at our range of bikes, and begin your journey.</p>
     </div>
 
     <br><br>
@@ -71,27 +71,27 @@
     <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem;">
-                <img src="images/img5.jpg" class="card-img-top" width="1420" height="342" alt="...">
+                <img src="images/img7.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Forum</h5>
+                  <p class="card-text">Talk with like-minded bike enthusiasts!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Check out our latest bike collection!</h5>
+                  <p class="card-text">Latest Bike Collection</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
+                <img src="images/img1.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Send us an email!</h5>
+                  <p class="card-text">Want a quick chat? Send us an email!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
         </div>
