--- a/rent.html
+++ b/rent.html
@@ -62,7 +62,7 @@
         <h1>&nbsp;</h1>
         <h1>&nbsp;</h1>
       <h1>Rent</h1>
-        <p>Bicycles are rented out by a bike rental or bike hiring company for brief durations, typically a few hours. Bike shops typically offer rentals as a supplemental service to their primary sales and service activities, while other shops focus exclusively on this area of business.Bicycles are rented out for brief periods of time, typically for a few hours, by a bike rental or bike hiring company. The majority of rentals are offered by bike shops as a sideline to their primary sales and service businesses, however some stores specialise in rentals.Bicycles are rented out by a bike rental or bike hiring company for short durations, typically a few hours. The majority of rentals are offered by bike shops as a supplementary service to their primary businesses of sales and service, however some stores specialise in rentals. Bicycles are rented out by a bike rental or bike hiring company for brief periods of time, typically a few hours. The majority of rentals are offered by bike shops as a sideline to their primary businesses of sales and service, however some stores specialise in rentals. Bicycles are rented out by a bike rental or bike hiring company for brief durations, typically a few hours. Bike shops typically offer rentals as a supplemental service to their primary sales and service activities, while other shops focus exclusively on this area of business. Bicycles are rented out by a bike rental or bike hiring company for short durations, typically a few hours. The majority of rentals are offered by bike shops as a supplementary service to their primary businesses of sales and service, however some stores specialise in rentals.</p>
+        <p>Planning a journey outdoors but don't want to splaah the cash on a new bike? No problem! You can rent a bike of your choosing, choose the length of how long you wish to rent it for, and reserve your bike for collection at one of our outlets. It's just that simple.</p>
 </div>
 
     <br><br>
@@ -71,27 +71,27 @@
     <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem;">
-                <img src="images/img6.jpg" class="card-img-top" width="105%" height="359" alt="...">
+                <img src="images/img7.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Forum</h5>
+                  <p class="card-text">Talk with like-minded bike enthusiasts!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Check out our latest bike collection!</h5>
+                  <p class="card-text">Latest Bike Collection</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
+                <img src="images/img1.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Send us an email!</h5>
+                  <p class="card-text">Want a quick chat? Send us an email!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
         </div>
