--- a/repair.html
+++ b/repair.html
@@ -70,7 +70,7 @@
         <h1>&nbsp;</h1>
         <h1>&nbsp;</h1>
       <h1>Repair</h1>
-        <p>You can, indeed! A bike frame made of carbon fibre that has been cracked, broken, or split can be repaired by laying new carbon fibres on top of the existing ones and epoxying them in place in the same direction. The ultimate result is a bicycle frame that is little heavier but stronger than the original design. Indeed, you can! A carbon fibre bike frame that has been cracked, damaged, or split can be repaired by laying new carbon fibres and epoxying them in the same direction as the original fibres. The ultimate product is a significantly lighter and stronger bicycle frame than the original design. In fact, you can! New carbon fibres are laid and epoxyed in the same direction as the original fibres in order to repair a bike frame made of carbon fibre that has been cracked, broken, or split. In the end, the weight gain is little, and the bicycle frame is stronger than it was originally.You certainly can! A bike frame made of carbon fibre that has been cracked, broken, or split can be repaired by laying new carbon fibres and epoxying them in the same direction as the original fibres. The ultimate result is a bicycle frame that is little heavier but stronger than the original construction. ou can, indeed! A bike frame made of carbon fibre that has been cracked, broken, or split can be repaired by laying new carbon fibres on top of the existing ones and epoxying them in place in the same direction. The ultimate result is a bicycle frame that is little heavier but stronger than the original design.</p>
+        <p>We all know the feeling when your bike's tyres suddenly become flat when you're cycling. Or after wear and use, nuts and bolts fall off the bike. No need to worry! We can fix any bike, any problem! Visit us today for a free consultation!</p>
     </div>
 
     <br><br>
@@ -79,27 +79,27 @@
     <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem;">
-                <img src="images/img4.jpg" class="card-img-top" width="1420" height="509" alt="...">
+                <img src="images/img7.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Forum</h5>
+                  <p class="card-text">Talk with like-minded bike enthusiasts!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/img4.jpg" class="card-img-top" width="1420" height="314" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Check out our latest bike collection!</h5>
+                  <p class="card-text">Latest Bike Collection</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
-                <img src="images/img1.jpg" class="card-img-top" width="1420" height="395" alt="...">
+                <img src="images/img1.jpg" class="card-img-top" width="400px" height="250px" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Send us an email!</h5>
+                  <p class="card-text">Want a quick chat? Send us an email!</p>
+                  <a href="#" class="btn btn-primary">Enter</a>
                 </div>
             </div>
         </div>
