--- a/newbikes.html
+++ b/newbikes.html
@@ -30,11 +30,13 @@
         </div>
       </nav>
     
-    <!-- Image slider - carousel -->
+   <!-- Image slider - carousel -->
     <div class="container">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active"></div>
+          <div class="carousel-item active">
+            <img src="images/img9.jpg" class="d-block w-100" alt="...">
+          </div>
           <div class="carousel-item">
             <img src="images/img12.jpg" class="d-block w-100" alt="...">
           </div>
