--- a/newbikes.html
+++ b/newbikes.html
@@ -11,20 +11,30 @@
 
 </head>
 <body>
+    </head>
+<body>
     <!-- Navigation bar  -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="images/Bikes All.png" alt="" height="242" width="263"></a>
+          <a class="navbar-brand" href="#"><img src="images/Bikes All.png" alt="" height="80px" width="80px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center">
-              <li class="nav-item"> <a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="newbikes.html">New Bikes</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="repair.html">Repair Bikes</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="rent.html">Rent / Lease</a> </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="newbikes.html">New Bikes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="repair.html">Repair Bikes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="rent.html">Rent / Lease</a>
+              </li>
             </ul>
           </div>
         </div>
