--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Forum</h5>
                   <p class="card-text">Talk with like-minded bike enthusiasts!</p>
-                  <a href="#" class="btn btn-primary">Enter</a>
+                  <a href="https://www.bikeforums.net/" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
@@ -90,7 +90,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Check out our latest bike collection!</h5>
                   <p class="card-text">Latest Bike Collection</p>
-                  <a href="#" class="btn btn-primary">Enter</a>
+                  <a href="newbikes.html" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
@@ -98,7 +98,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Send us an email!</h5>
                   <p class="card-text">Want a quick chat? Send us an email!</p>
-                  <a href="#" class="btn btn-primary">Enter</a>
+                  <a href="index.html" class="btn btn-primary">Enter</a>
                 </div>
             </div>
         </div>
