--- a/repair.html
+++ b/repair.html
@@ -73,7 +73,7 @@
 
     <br><br>
     
-    <!-- cards -->
+     <!-- cards -->
     <div class="container">
         <div class="row">
             <div class="card col" style="width: 18rem;">
@@ -81,7 +81,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Forum</h5>
                   <p class="card-text">Talk with like-minded bike enthusiasts!</p>
-                  <a href="#" class="btn btn-primary">Enter</a>
+                  <a href="https://www.bikeforums.net/" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
@@ -89,7 +89,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Check out our latest bike collection!</h5>
                   <p class="card-text">Latest Bike Collection</p>
-                  <a href="#" class="btn btn-primary">Enter</a>
+                  <a href="newbikes.html" class="btn btn-primary">Enter</a>
                 </div>
             </div>
             <div class="card col" style="width: 18rem;">
@@ -97,7 +97,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Send us an email!</h5>
                   <p class="card-text">Want a quick chat? Send us an email!</p>
-                  <a href="#" class="btn btn-primary">Enter</a>
+                  <a href="index.html" class="btn btn-primary">Enter</a>
                 </div>
             </div>
         </div>
